--- a/content/projects/chronark.com.mdx
+++ b/content/projects/chronark.com.mdx
@@ -1,8 +1,8 @@
 ---
-title: chronark.com
+title: nandanvarma.com
 description: The website you're looking at
-repository: chronark/chronark.com
-url: https://chronark.com
+repository: chronark/nandanvarma.com
+url: https://nandanvarma.com
 date: 2023-03-28
 published: true
 ---
