uploaded some projects

--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -8,7 +8,20 @@ published: true
 ---
 
 
-Webpage to show what i worked on and working on.
+# Webpage to show what i worked on and working on.
+
+
+## Features
+
+- Projects rendered from markdown
+- Clean CSS
+- dynamically generated metadata
+
+## Built with
+
+- [Next.js](https://nextjs.org)
+- [tailwindcss](https://tailwindcss.com)
+- Deployed on [Vercel](https://vercel.com)
 
 this is a fork from [chronark/chronark.com](https://github.com/chronark/chronark.com)
 
