--- a/content/projects/bingo.mdx
+++ b/content/projects/bingo.mdx
@@ -13,6 +13,15 @@ published: true
 - Hashable board (so you can choose your favourite board everytime).
 - Multiplayer using peer to peer connection with WebRTC.
 
+## TODO
+
+- Use firebase for matching players
+
+## What I learnt
+
+- Hashing
+- Caching
+- peer to peer connections
 
 ## Built with
 
