--- a/content/projects/chess.mdx
+++ b/content/projects/chess.mdx
@@ -15,8 +15,16 @@ Chess Online is developed to play chess online with flexiblity to upload and upg
 - Play with friends
 - Play with AI
 - Play on board
+
+## TODO
+
 - User specific metrics(under development)
 - login system for future use.
+
+## What I learnt
+
+- Integrating AI to web applications
+- Realtime updates with database
 
 
 ## Built with
