--- a/content/projects/clubpage.mdx
+++ b/content/projects/clubpage.mdx
@@ -12,8 +12,12 @@ and other blogging mechanisms
 
 ## Features
 
-- Timed Post Reccomendations
+- Time based post reccomendations
 - Apis to get posts and blogs
+
+## What I learnt
+
+- Working with Markdown
 
 ## Built with
 
