--- a/content/projects/explorer.mdx
+++ b/content/projects/explorer.mdx
@@ -16,6 +16,11 @@ with features like
 - termial in current directory
 - show git status if present
 
+## What I learnt
+
+- Filesystem calls
+- UI/UX 
+
 
 ## Built with
 
