--- a/content/projects/meadows.mdx
+++ b/content/projects/meadows.mdx
@@ -7,8 +7,9 @@ url: https://chess.nandanvarma.com
 published: true
   
 ---
+# Under Active development
 
-## Chess Engine that learned to give moves based on parameters like
+Chess Engine that learned to give moves based on parameters like
 
 - Authority over free squares
 - Targeting enemy pieces
@@ -16,7 +17,6 @@ published: true
 - Support own pieces
 - Finally targeting enemy king.
 - and many more...
-
 
 ## Built with
 
