--- a/content/projects/podcasts.mdx
+++ b/content/projects/podcasts.mdx
@@ -17,6 +17,10 @@ Podcasts is developed for submission for a hackathon in 5 days
 - Player controls for online playing
 - login system for favorites and reccomendations
 
+## What I learnt
+
+- Communications and Work allotment
+- MongoDB
 
 ## Built with
 
