--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -17,6 +17,15 @@ published: true
 - Clean CSS
 - dynamically generated metadata
 
+## TODO
+
+- Change Color schemes and design
+
+## What I learnt
+
+- DNS services
+- SEO ( Search Engine Optimization )
+
 ## Built with
 
 - [Next.js](https://nextjs.org)
