--- a/content/projects/puzzles.mdx
+++ b/content/projects/puzzles.mdx
@@ -15,6 +15,11 @@ published: true
 - [speed](https://puzzle.nandanvarma.com/speed) where you play whack-a-mole.
 - many more to come if i have time.
 
+## What I learnt
+
+- Code Modularity
+- Creativitiy
+- Understanding requirements
 
 ## Built with
 
