--- a/content/projects/openband.mdx
+++ b/content/projects/openband.mdx
@@ -8,13 +8,20 @@ published: true
 ---
 
 
-
 ## Features
 
 - GUI to use piano on keyboard
 - Record and replay tune made from piano 
 
+## TODO
 
+- Other instruments
+- Abilty to export and save tunes
+
+## What I learnt
+
+- Handling audio in multiple platforms
+- Mutliple input handling ( keyboard )
 
 ## Built with
 
