--- a/content/projects/music.mdx
+++ b/content/projects/music.mdx
@@ -3,7 +3,7 @@ title: Music
 description: Music application
 date: "2023-06-14"
 repository: nandan-varma/songs
-url: https://podcasts.nandanvarma.com
+url: https://songs.nandanvarma.com
 published: true
   
 ---
