--- a/content/projects/puzzles.mdx
+++ b/content/projects/puzzles.mdx
@@ -10,10 +10,10 @@ published: true
 
 ## Puzzles tests your abilty in
 
-- [analytical](https://puzzle.nandanvarma.com/analytical) where you find words from table.
-- [memory](https://puzzle.nandanvarma.com/memory) where you find similar cards.
-- [speed](https://puzzle.nandanvarma.com/speed) where you play whack-a-mole.
-- many more to come if i have time.
+- [Analytical test](https://puzzle.nandanvarma.com/analytical) where you find words from table.
+- [Memory test](https://puzzle.nandanvarma.com/memory) where you find similar cards.
+- [Speed test](https://puzzle.nandanvarma.com/speed) where you play whack-a-mole.
+- Many more to come if i have time.
 
 ## What I learnt
 
