updated some things

--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -10,6 +10,8 @@ published: true
 
 # Webpage to show what i worked on and working on.
 
+this is a fork from [chronark/chronark.com](https://github.com/chronark/chronark.com)
+Somethings are better not reimplemented so i copied some homework.
 
 ## Features
 
@@ -20,6 +22,7 @@ published: true
 ## TODO
 
 - Change Color schemes and design
+- implement blog system
 
 ## What I learnt
 
@@ -32,5 +35,4 @@ published: true
 - [tailwindcss](https://tailwindcss.com)
 - Deployed on [Vercel](https://vercel.com)
 
-this is a fork from [chronark/chronark.com](https://github.com/chronark/chronark.com)
 
