--- a/content/projects/music.mdx
+++ b/content/projects/music.mdx
@@ -8,7 +8,7 @@ published: true
   
 ---
 
-Music is an application to play and download music
+An application to play and download music
 
 ## Features
 
@@ -32,5 +32,4 @@ Music is an application to play and download music
 - [Next.js](https://nextjs.org)
 - [tailwindcss](https://tailwindcss.com)
 - Deployed on [Vercel](https://vercel.com)
-- Database on [mongodb](https://www.mongodb.com)
-- Authentication on [Firebase](https://firebase.google.com)
+- Some JioSaavn APIs that shall not be discussed 🤫
