prod. app update

--- a/content/projects/podcasts.mdx
+++ b/content/projects/podcasts.mdx
@@ -1,31 +1,32 @@
 ---
-title: Podcasts [ deprecated ]
-description: Podcasts is an app i developed with my freinds for a hackathon in 5 days
+title: Podcasts
+description: Podcasts is an app to nuke the moon. JK, it stores and plays podcasts
 date: "2022-09-24"
 repository: TheBrosProj/podcasts
-url: https://podcasts.nandanvarma.com
+url: https://pod.nandanvarma.com
 published: true
   
 ---
 
-Podcasts is developed for submission for a hackathon in 5 days
+Podcasts is developed with my friends for hackathon but later updated to be full stack application.
 
 ## Features
 
 - Store audio in database
 - Play and download audio files
 - Player controls for online playing
-- login system for favorites and reccomendations
+- login system for favorites
 
 ## What I learnt
 
-- Communications and Work allotment
+- React Contexts
 - MongoDB
+- Communication and Work allotment
 
 ## Built with
 
 - [Next.js](https://nextjs.org)
-- [tailwindcss](https://tailwindcss.com)
+- [chakra-ui](https://chakra-ui.com)
 - Deployed on [Vercel](https://vercel.com)
 - Database on [mongodb](https://www.mongodb.com)
 - Authentication on [Firebase](https://firebase.google.com)
