--- a/content/projects/podcasts.mdx
+++ b/content/projects/podcasts.mdx
@@ -29,4 +29,4 @@ Podcasts is developed with my friends for hackathon but later updated to be full
 - [chakra-ui](https://chakra-ui.com)
 - Deployed on [Vercel](https://vercel.com)
 - Database on [mongodb](https://www.mongodb.com)
-- Authentication on [Firebase](https://firebase.google.com)
+- Authentication using [Firebase](https://firebase.google.com)
