--- a/content/projects/productivity.mdx
+++ b/content/projects/productivity.mdx
@@ -1,6 +1,6 @@
 ---
 title: Productivity
-description: Productivity application for gather thoughts
+description: Productivity application for gather thoughts.
 date: "2023-07-27"
 repository: TheBrosProj/frontend
 url: https://prod.nandanvarma.com
