--- a/content/projects/productivity.mdx
+++ b/content/projects/productivity.mdx
@@ -1,8 +1,8 @@
 ---
 title: Productivity
 description: Productivity application for gather thoughts.
-date: "2023-07-27"
-repository: TheBrosProj/frontend
+date: "2023-08-24"
+repository: TheBrosProj/notes
 url: https://prod.nandanvarma.com
 published: true
   
@@ -18,16 +18,14 @@ An application to gather thoughts and work on them
 - UI slick AF
 
 ## TODO
-
-- Backend to store Todos and Notes
-- Authentication
+- Implement AI tools to common note taking scenarios like summarization and referencing
 
 ## What I learnt
 
-- Real Time Updates
 - UI design
 - Multi Platform support
-- MongoDB
+- API design
+- SQL Database with upgradability in mind
 
 
 ## Built with
@@ -35,6 +33,5 @@ An application to gather thoughts and work on them
 - [Next.js](https://nextjs.org)
 - [chakra-ui](https://chakra-ui.com)
 - Deployed on [Vercel](https://vercel.com)
-- Axios APIs
-- [MongoDB](https://mongodb.com)
-- Deployed on [MongoDB.com](https://mongodb.com)
+- PostgreSQL
+- Deployed on [neon.tech](https://neon.tech/)
