added handwriting proj.

--- a/content/projects/bingo.mdx
+++ b/content/projects/bingo.mdx
@@ -23,6 +23,8 @@ published: true
 - Caching
 - peer to peer connections
 
+P.S I am not that good at web dev. when i did this.
+
 ## Built with
 
 - [Next.js](https://nextjs.org)
