--- a/content/projects/clubpage.mdx
+++ b/content/projects/clubpage.mdx
@@ -1,9 +1,9 @@
 ---
-title: "Club Webpage"
+title: "Metarics"
 description: A webpage i developed and deployed for My club in college.
 date: "2022-11-13"
-url: https://club.nandanvarma.com
-repository: nandan-varma/clubpage
+url: https://metarics.nandanvarma.com
+repository: Metarics/metarics
 published: true
   
 ---
@@ -14,14 +14,17 @@ and other blogging mechanisms
 
 - Time based post reccomendations
 - Apis to get posts and blogs
+- Smooth animations
+- Lightweight and fast
 
 ## What I learnt
 
 - Working with Markdown
+- Astro
 
 ## Built with
 
-- [Next.js](https://nextjs.org)
+- [Astro](https://Astro.build)
 - [tailwindcss](https://tailwindcss.com)
 - Deployed on [Vercel](https://vercel.com)
 
