--- a/content/projects/explorer.mdx
+++ b/content/projects/explorer.mdx
@@ -16,6 +16,8 @@ with features like
 - termial in current directory
 - show git status if present
 
+P.S I am not good at C# or .Net when i did this.
+
 ## What I learnt
 
 - Filesystem calls
