--- a/content/projects/music.mdx
+++ b/content/projects/music.mdx
@@ -8,11 +8,11 @@ published: true
   
 ---
 
-An application to play and download music
+An application to play and download music.
 
 ## Features
 
-- Scrapes music from JioSaavn
+- Scrapes music from JioSaavn (thanks to it not using DRM)
 - Can search songs and albums
 - Ability to add to playlist
 - Download songs in 150kbps(High Quality)
