--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -7,11 +7,11 @@ date: 2023-03-28
 published: true
 ---
 
-
 # Webpage to show what i worked on and working on.
 
-this is a fork from [chronark/chronark.com](https://github.com/chronark/chronark.com)
 Somethings are better not reimplemented so i copied some homework.
+this is a fork from [chronark/chronark.com](https://github.com/chronark/chronark.com)
+Although highly modified to suit myself.
 
 ## Features
 
@@ -32,6 +32,7 @@ Somethings are better not reimplemented so i copied some homework.
 ## Built with
 
 - [Next.js](https://nextjs.org)
+- [contentlayer](https://contentlayer.dev)
 - [tailwindcss](https://tailwindcss.com)
 - Deployed on [Vercel](https://vercel.com)
 
