--- a/content/projects/bingo.mdx
+++ b/content/projects/bingo.mdx
@@ -1,6 +1,6 @@
 ---
 title: Bingo
-description: Bingo is webpage developed to play Bingo online with multiplayer using sharable link
+description: Bingo is a webpage developed to play Bingo online with multiplayer using a shareable link
 date: "2021-10-15"
 repository: nandan-varma/chess-online
 url: https://bingo.nandanvarma.com
@@ -8,22 +8,22 @@ published: true
   
 ---
 
-## Bingo implements following features
+## Bingo implements the following features
 
-- Hashable board (so you can choose your favourite board everytime).
+- Hashable board (so you can choose your favorite board every time).
 - Multiplayer using peer to peer connection with WebRTC.
 
 ## TODO
 
-- Use firebase for matching players
+- Use Firebase for matching players
 
 ## What I learnt
 
 - Hashing
 - Caching
-- peer to peer connections
+- Peer-to-peer connections
 
-P.S I am not that good at web dev. when i did this.
+P.S. I was not that good at web development when I did this.
 
 ## Built with
 
