--- a/content/projects/chain.mdx
+++ b/content/projects/chain.mdx
@@ -1,6 +1,6 @@
 ---
 title: Chain Reaction
-description: A game i played as child
+description: A game I played as a child
 date: "2023-09-24"
 repository: nandan-varma/chain
 url: https://chain.nandanvarma.com
@@ -9,9 +9,9 @@ published: true
 ---
 # Chain Reaction
 
-A Game with tactics and numbers.
-I used to play this and now it became too old and less responsive due to poor maintence from its android developer
-so i did it on web instead for cross platform reasons
+A game with tactics and numbers.
+I used to play this, but it became outdated and less responsive due to poor maintenance from its Android developer.
+So, I recreated it on the web for cross-platform compatibility.
 
 - Minimal UI with dark mode too
 - 3 players too
