--- a/content/projects/chat.mdx
+++ b/content/projects/chat.mdx
@@ -18,14 +18,14 @@ A real time chat application and challenge for me to learn encryption
 
 ## TODO
 - Implement encryption
-- transfer from firebase to SQL
+- Transfer from Firebase to SQL
 
 ## What I learnt
 
 - Realtime DB updates
 - Encryption
 - DB migrations
-- SQL orms
+- SQL ORMs
 
 
 ## Built with
