--- a/content/projects/chess.mdx
+++ b/content/projects/chess.mdx
@@ -1,6 +1,6 @@
 ---
 title: Chess Online
-description: Chess Online is a web interface i created to test and develop my own Chess Engine.
+description: Chess Online is a web interface I created to test and develop my own Chess Engine.
 date: "2022-08-20"
 repository: nandan-varma/chess-online
 url: https://chess.nandanvarma.com
@@ -8,7 +8,7 @@ published: true
   
 ---
 
-Chess Online is developed to play chess online with flexiblity to upload and upgrade my own chess engine which is in active development
+Chess Online is developed to play chess online with the flexibility to upload and upgrade my own chess engine, which is in active development.
 
 ## Features
 
@@ -18,13 +18,13 @@ Chess Online is developed to play chess online with flexiblity to upload and upg
 
 ## TODO
 
-- User specific metrics(under development)
-- login system for future use.
+- User-specific metrics (under development)
+- Login system for future use.
 
 ## What I learnt
 
 - Integrating AI to web applications
-- Realtime updates with database
+- Real-time updates with the database
 
 
 ## Built with
