--- a/content/projects/clubpage.mdx
+++ b/content/projects/clubpage.mdx
@@ -1,20 +1,19 @@
 ---
 title: "Metarics"
-description: A webpage i developed and deployed for My club in college.
+description: A webpage I developed and deployed for my club in college.
 date: "2022-11-13"
 url: https://metarics.nandanvarma.com
 repository: Metarics/metarics
 published: true
   
 ---
-Webpage implemented to handle blogs, posts with markdown support
-and other blogging mechanisms
+Webpage implemented to handle blogs and posts with Markdown support and other blogging mechanisms.
 
 ## Features
 
 - Time based post reccomendations
-- Apis to get posts and blogs
-- Smooth animations
+- Time-based post recommendations
+- APIs to get posts and blogs
 - Lightweight and fast
 
 ## What I learnt
