--- a/content/projects/explorer.mdx
+++ b/content/projects/explorer.mdx
@@ -7,14 +7,13 @@ published: true
   
 ---
 
-File Explorer is to overcome some of my inconvenience with windows explorer.
-with features like
+File Explorer is designed to overcome some of my inconveniences with Windows Explorer, with features like
 
 ## Features
 
 - show file tree instead of folder system
 - termial in current directory
-- show git status if present
+- terminal in the current directory
 
 P.S I am not good at C# or .Net when i did this.
 
