--- a/content/projects/meadows.mdx
+++ b/content/projects/meadows.mdx
@@ -1,15 +1,15 @@
 ---
 title: Meadows
-description: Meadows is Chess engine developed using a little of reinforcement with RNN.
+description: Meadows is a Chess engine developed using reinforcement learning with RNN.
 date: "2022-07-18"
 repository: nandan-varma/chess-online
 url: https://chess.nandanvarma.com
 published: true
   
 ---
-# Under Active development
+# Under Active Development
 
-Chess Engine that learned to give moves based on parameters like
+Chess engine that learns to make moves based on parameters like
 
 - Authority over free squares
 - Targeting enemy pieces
