--- a/content/projects/openband.mdx
+++ b/content/projects/openband.mdx
@@ -1,6 +1,6 @@
 ---
 title: OpenBand
-description: OpenBand is simple tool to use musical intruments to record and replay keys and it is under active development.
+description: OpenBand is a simple tool to use musical instruments to record and replay keys, and it is under active development.
 date: "2023-01-16"
 url: https://band.nandanvarma.com
 repository: nandan-varma/OpenBand
@@ -11,17 +11,17 @@ published: true
 ## Features
 
 - GUI to use piano on keyboard
-- Record and replay tune made from piano 
+- Record and replay tunes made from piano
 
 ## TODO
 
 - Other instruments
-- Abilty to export and save tunes
+- Ability to export and save tunes
 
 ## What I learnt
 
 - Handling audio in multiple platforms
-- Mutliple input handling ( keyboard )
+- Multiple input handling (keyboard)
 
 ## Built with
 
