--- a/content/projects/podcasts.mdx
+++ b/content/projects/podcasts.mdx
@@ -15,9 +15,9 @@ Podcasts is developed with my friends for hackathon but later updated to be full
 - Store audio in database
 - Play and download audio files
 - Player controls for online playing
-- login system for favorites
+- Login system for favorites
 
-## What I learnt
+## What I learned
 
 - React Contexts
 - MongoDB
