--- a/content/projects/productivity.mdx
+++ b/content/projects/productivity.mdx
@@ -1,6 +1,6 @@
 ---
 title: Productivity
-description: Productivity application for gather thoughts.
+description: Productivity application for gathering thoughts.
 date: "2023-08-24"
 repository: TheBrosProj/notes
 url: https://prod.nandanvarma.com
@@ -8,14 +8,14 @@ published: true
   
 ---
 
-An application to gather thoughts and work on them
+An application to gather and organize thoughts
 
 ## Features
 
 - Pomodoro Timer
 - TODO list
 - Notes
-- UI slick AF
+- Slick UI
 
 ## TODO
 - Implement AI tools to common note taking scenarios like summarization and referencing
