--- a/content/projects/puzzles.mdx
+++ b/content/projects/puzzles.mdx
@@ -1,6 +1,6 @@
 ---
 title: Puzzles
-description: Puzzles is project i developed for a job selection in 7 days
+description: Puzzles is a project I developed for a job selection in 7 days
 date: "2022-10-24"
 repository: nandan-varma/puzzle
 url: https://puzzle.nandanvarma.com
@@ -8,7 +8,7 @@ published: true
   
 ---
 
-## Puzzles tests your abilty in
+## Puzzles tests your ability in
 
 - [Analytical test](https://puzzle.nandanvarma.com/analytical) where you find words from table.
 - [Memory test](https://puzzle.nandanvarma.com/memory) where you find similar cards.
@@ -18,7 +18,7 @@ published: true
 ## What I learnt
 
 - Code Modularity
-- Creativitiy
+- Creativity
 - Understanding requirements
 
 ## Built with
