--- a/content/projects/calendar.mdx
+++ b/content/projects/calendar.mdx
@@ -1,21 +1,21 @@
 ---
 title: Friday
 description: giving your calendar to an AI (currently in alpha) 
-date: "2024-07-7"
+date: "2024-07-07"
 repository: nandan-varma/friday
 url: https://friday.nandanvarma.com
 published: true
   
 ---
 
-An AI to handle your chats for you. ( In alpha )
+An AI to handle your Calendar for you. ( In alpha )
 
 ## Features
 
 - Uses AI to add events
-- show your calendar
-- can use complicated queries and understand time schedules
-- voice recognition to chat with AI
+- Show your calendar
+- Can use complicated queries and understand time schedules
+- Voice recognition to chat with AI
 
 ## TODO
 - Edit events
@@ -33,5 +33,5 @@ An AI to handle your chats for you. ( In alpha )
 - [Next.js](https://nextjs.org)
 - [shadcn-ui](https://ui.shadcn.com/)
 - Deployed on [Vercel](https://vercel.com)
-- [OpenAI](https://platform.openai.com/)
-- [Google Calendar](https://calendar.google.com/)
+- [OpenAI](https://platform.openai.com/) for AI agent
+- [Google Calendar](https://calendar.google.com/) for integration (in works)
