--- a/content/projects/handwriting.mdx
+++ b/content/projects/handwriting.mdx
@@ -1,21 +1,21 @@
 ---
 title: handwriting
-description: Simple GUI web app to generate hand written pdf ( for those who forgets about assignments )
+description: Simple GUI web app to generate handwritten PDFs (for those who forget about assignments)
 date: "2023-06-16"
 repository: nandan-varma/handwriting
 url: https://writing.nandanvarma.com
 published: true
   
 ---
-# Hand writing generation
+# Handwriting Generation
 
-Generates uniquely generated pdf with minimal UI
+Generates uniquely styled PDFs with a minimal UI
 
-- PDFs generated right way (you can even mark/copy text after generation)
+- PDFs generated the right way (you can even mark/copy text after generation)
 - Minimal UI
-- Configurable with margin, font size, spacings
+- Configurable with margin, font size, and spacing
 
-A better version is made with Tensorflow V2 ,flask using RNN but cant deploy docker/ flask with models for free and i am broke rn.
+A better version is made with TensorFlow V2 and Flask using RNN, but I can't deploy Docker/Flask with models for free and I am broke right now.
 
 ## Built with
 
