--- a/content/projects/music.mdx
+++ b/content/projects/music.mdx
@@ -15,12 +15,12 @@ An application to play and download music.
 - Scrapes music from JioSaavn (thanks to it not using DRM)
 - Can search songs and albums
 - Ability to add to playlist
-- Download songs in 150kbps(High Quality)
+- Download songs in 150kbps (High Quality)
 
 ## TODO
 
 - Export and save playlist
-- Reccomendation system
+- Recommendation system
 
 ## What I learnt
 
