--- a/content/projects/portfolio.mdx
+++ b/content/projects/portfolio.mdx
@@ -7,11 +7,11 @@ date: 2023-03-28
 published: true
 ---
 
-# Webpage to show what i worked on and working on.
+# Webpage to show what I worked on and am working on.
 
-Somethings are better not reimplemented so i copied some homework.
-this is a fork from [chronark/chronark.com](https://github.com/chronark/chronark.com)
-Although highly modified to suit myself.
+Some things are better not reimplemented, so I copied some homework.
+This is a fork from [chronark/chronark.com](https://github.com/chronark/chronark.com),
+although highly modified to suit myself.
 
 ## Features
 
