--- a/src/content/project/portfolio.mdx
+++ b/src/content/project/portfolio.mdx
@@ -3,7 +3,7 @@ title: nandanvarma.com
 description: The website you're looking at
 repository: nandan-varma/portfolio
 url: https://www.nandanvarma.com
-date: 2023-03-28
+date: "2023-03-28"
 published: true
 ---
 
