trying transitions and minor UI tweaks

--- a/src/content/project/calendar.mdx
+++ b/src/content/project/calendar.mdx
@@ -3,6 +3,7 @@ title: Friday
 description: giving your calendar to an AI (currently in alpha) 
 date: "2024-07-07"
 repository: nandan-varma/friday
+emoji: 📅
 url: https://friday.nandanvarma.com
 published: true
   
