--- a/src/content/project/portfolio.mdx
+++ b/src/content/project/portfolio.mdx
@@ -9,30 +9,30 @@ published: true
 
 # Webpage to show what I worked on and am working on.
 
-Some things are better not reimplemented, so I copied some homework.
-This is a fork from [chronark/chronark.com](https://github.com/chronark/chronark.com),
-although highly modified to suit myself.
+Written from scratch using Astro, TailwindCSS.
 
 ## Features
 
 - Projects rendered from markdown
 - Clean CSS
 - dynamically generated metadata
+- SEO optimized
+- Dark mode
 
 ## TODO
 
-- Change Color schemes and design
-- implement project system
+- Add more projects
+- Add more about me
 
 ## What I learnt
 
-- DNS services
+- CSS
 - SEO ( Search Engine Optimization )
+- DNS services
 
 ## Built with
 
-- [Next.js](https://nextjs.org)
-- [contentlayer](https://contentlayer.dev)
+- [Astro](https://astro.build)
 - [tailwindcss](https://tailwindcss.com)
 - Deployed on [Vercel](https://vercel.com)
 
