--- a/src/content/project/portfolio.mdx
+++ b/src/content/project/portfolio.mdx
@@ -11,6 +11,11 @@ published: true
 
 Written from scratch using Astro, TailwindCSS.
 
+
+![nandanvarma.com](https://raw.githubusercontent.com/nandan-varma/portfolio/main/public/og.png)
+
+
+
 ## Features
 
 - Projects rendered from markdown
@@ -18,6 +23,8 @@ Written from scratch using Astro, TailwindCSS.
 - dynamically generated metadata
 - SEO optimized
 - Dark mode
+
+![Metrics](https://qujr12qsco.ufs.sh/f/fthLDAMTNUTlPpHcGaGeKORrxvEuqMUwAoi26Q39naB8zGWe)
 
 ## TODO
 
