created and featured fitness app and bug fixes

--- a/src/content/blog/fitness.mdx
+++ b/src/content/blog/fitness.mdx
@@ -21,7 +21,7 @@ Just like all my other [projects](/projects), I like to combine my hobbies with 
 I like to listen to music, so I made a [music app](/projects/music).
 I like play chess, so I made a [chess app](/projects/chess).
 \*cough\* I dont like to hand write my assignments, so I made a [handwritten pdf gen app](/projects/handwriting) to write my assignments.
-I like to workout, so I am making a fitness app.
+I like to workout, so I am making a [fitness app](/projects/fitness).
 
 # Why
 
