--- a/src/content/project/bingo.mdx
+++ b/src/content/project/bingo.mdx
@@ -2,7 +2,7 @@
 title: Bingo
 description: Bingo is a webpage developed to play Bingo online with multiplayer using a shareable link
 date: "2021-10-15"
-repository: nandan-varma/chess-online
+repository: nandan-varma/bingo
 url: https://bingo.nandanvarma.com
 published: true
   
