--- a/src/content/blog/how.mdx
+++ b/src/content/blog/how.mdx
@@ -1,26 +1,26 @@
 ---
 title: Please, build something
-description: Doesn't matter what, just build something.
+description: It doesn't matter what, just build something.
 date: "2025-06-26"
-draft: true
+draft: false
 tags: ["development", "guides", "startups"]
 ---
 
-I know I am being a generic linkedin post right now, but I get asked this question a lot.
-To be honest, I see **a lot of bad advice on the internet** especially on linkedin.
-So I thought I would write down my thoughts on this and I will refrain from giving you same advice you see everywhere else.
+I know I am being a generic LinkedIn post right now, but I get asked this question a lot.
+To be honest, I see **a lot of bad advice on the internet**, especially on LinkedIn.
+So I thought I would write down my thoughts on this, and I will refrain from giving you the same advice you see everywhere else.
 
 ## Only using AI and not using it at all are both bad ideas.
-To be honest, AI is not perfect yet but it is here to stay.
-So try to learn to use it but don't rely on it completely.
-**Use it to help you write code, to generate ideas, to find bugs, and to learn new things.**
+To be honest, AI is not perfect yet, but it is here to stay.
+So try to learn to use it, but don't rely on it completely.
+**Use it to help you write code, generate ideas, find bugs, and learn new things.**
 But don't use it to write your entire application or to solve all your problems.
 
-And most important of them all, use the right tool for the job.
+And most important of all, use the right tool for the job.
 
 Here are some AI tools I use:
 - [V0.dev](https://v0.dev) for creating simple web application prototypes.
-- [Database.build](https://database.build) for creating SQL migrations and visualizing database schema.
+- [Database.build](https://database.build) for creating SQL migrations and visualizing database schemas.
 - [ChatGPT](https://chat.com) for searching and finding solutions to problems I am facing.
 
 If you find something new, use it, share it, and learn from it.
@@ -31,9 +31,9 @@ This will help you **understand how to write better code and how to structure yo
 See repositories of popular open source projects, read their code, and try to understand how they work.
 Maybe even contribute to them if you feel comfortable.
 
-Everyday I open [GitHub Trending](https://github.com/trending) to see what's new and how it works, how it is built, and what technologies are used.
+Every day I open [GitHub Trending](https://github.com/trending) to see what's new, how it works, how it is built, and what technologies are used.
 You can even filter by your favourite language. Follow some people who build interesting things in your technologies, languages, and frameworks on whatever platform you use.
-Heck you can even reachout to them and ask questions, most of the time they will be happy to help you.
+Heck, you can even reach out to them and ask questions; most of the time, they will be happy to help you.
 This helps you **learn new things, get inspired, and find new ideas** for your own projects and even know where to use what.
 
 ## Find what works for you
@@ -44,7 +44,7 @@ Some people like videos, others prefer books, articles, or hands-on tutorials.
 
 Don't feel bad if you stop using a resource that doesn't help you.
 Be careful with promises like "learn to code in 30 days" or "master programming fast."
-And please don't buy courses/certifications with absurd promises. Ask around if it is worth it.
+And please don't buy courses or certifications with absurd promises. Ask around if it is worth it.
 **Learning something new takes time and practice.**
 There are no shortcuts.
 
@@ -52,24 +52,24 @@ I like to learn by reading. Here are some resources I use when I want to learn s
 - Documentation of the technology I am learning.
 - [Roadmap.sh](https://roadmap.sh) for roadmaps for different technologies and roles.
 - [Learn X in Y Minutes](https://learnxinyminutes.com/) for quick reference guides for different programming languages.
-- Youtube
+- YouTube
 
 ## Doing something is better than doing nothing.
 This is the most important thing to remember.
 If you are not doing anything, you are not learning anything.
-That includes pasting code from chatgpt window to vscode and calling it a day.
+That includes pasting code from the ChatGPT window to VSCode and calling it a day.
 **You need to build something, anything.**
 It can be a simple todo app, a blog, a game, **anything**.
 
 Don't make excuses for not learning or not building something.
 I hear
-"I don't have time, I need to focus on getting a job,...",
-"I don't have time, I need to study for this grade, ..." a lot.
+"I don't have time, I need to focus on getting a job...",
+"I don't have time, I need to study for this grade..." a lot.
 But that misses the point. You get a job by learning to build, not by studying for exams.
 If you feel your grade says how good you are, I am sorry to say that you are wrong.
 
-If you dont have access to a good computer or cant install software on college computers, don't worry.
-Most of the development can just be used from the browser through cloud without any setup using tools like:
+If you don't have access to a good computer or can't install software on college computers, don't worry.
+Most development can be done from the browser through the cloud without any setup using tools like:
 - [GitHub Codespaces](https://github.com/codespaces/templates)
 - [Google Fire Studio](https://studio.firebase.google.com/templates)
 - [Google Colab](https://colab.research.google.com/)
@@ -79,7 +79,7 @@ To name a few.
 Don't want to pay for deployment? Don't worry, you can use free hosting services like:
 - [Cloudflare](https://cloudflare.com/) for pages, serverless functions, databases, storage, and more.
 - [Vercel](https://vercel.com/) for web applications using JS and Python frameworks.
-- [Upstash](https://upstash.com/) for Redis, Vector databases, Queues, AI Search and more.
+- [Upstash](https://upstash.com/) for Redis, vector databases, queues, AI search, and more.
 - [Neon](https://neon.tech/), [Turso](https://turso.tech/) for hosting databases.
 - Many more.
 
