--- a/src/content/blog/highspot.mdx
+++ b/src/content/blog/highspot.mdx
@@ -1,36 +1,59 @@
 ---
-title: I joined HighSpot
+title: Thank you Highspot
 description: TLDR; Learnt a lot, can't wait to learn more
-date: "2025-08-05"
+date: "2025-09-21"
 draft: true
 tags: ["development", "job", "life"]
 ---
 ## Contents
 
 *   [Introduction](#introduction)
-    *   [Why](#why)
-    *   [How](#how)
-*   [Final Thoughts](#final-thoughts)
+*   [What I did](#what-i-did)
+*   [What I learned](#what-i-learned)
+*   [Thank you](#thank-you)
 
 # Introduction
 
-I have been applying to all the interesting job listing I can find.
-been doing that for a while, but I could not get any interviews.
+I just completed my internship at Highspot as a **Associate Engineer Intern**.
+It was an incredible **start to my career** and I am grateful for the opportunity.
+I want to take a moment to reflect on my experience and share some of the things I learned
+during my time there.
 
-But then I got an email from HighSpot, It contents were simple :
-Here is a Github Repo with some tasks, complete it using **React and copilot** and make a PR and submit an hour recording of your thought process through this.
+# What I did
 
-I was excited and a bit nervous. But then, something crazy happened—my laptop broke down right in the middle of my exams!
-If you know me, You know I didn't give up either exams or the assignment.
-I didn’t want to switch to another laptop because setting up git with github auth, node, and npm and other stuff is a pain and college issued laptops are restricted from installing these clis.
+I dont know if I can say much about what I did. Just to be safe, I will keep it vague.
 
-So, I ordered a new screen for my laptop and fixed it myself. 
-<img src="https://qujr12qsco.ufs.sh/f/fthLDAMTNUTlr9w86ItJ95hV8dH7kSiKEgTt3LO6YwaqbMfQ" alt="Amazon order of Laptop Screen Replacement" />
+During my internship, I worked on mostly one feature which is just an idea before I started there.
+I have seen it grow from **idea to prototype to an actual feature**.
+I have mostly been working on the **Frontend, API and LLM side of things**.
+If you know me, you know this is right up my alley.
 
-Just when I thought things were back to normal, my laptop crashed again—right in the middle of recording my solution! I had only 15 minutes left. I quickly restarted, kept recording, and finished the task.
+Since This was my first internship, I was a bit nervous at first.
+But the team was very welcoming and supportive.
+I was able to contribute to the project and learn a lot along the way.
+I also had the opportunity to work with some **amazing people**.
+Everyone was very knowledgeable and willing to help.
+I also had the chance to attend some meetings and see how magic happens behind the scenes.
 
-I’m not telling this as an excuse. I just want to say: if you really want something, you’ll always find a way.
+# What I learned
 
-<img src="https://qujr12qsco.ufs.sh/f/fthLDAMTNUTl4o0N8SyH0KYGFceEXvBShQUayu1gCMlxo3dR" alt="Gif image" />
+I learned a lot during my internship.
+Will try to list some of them here:
+-  work in a team.
+-  communicate effectively.
+-  manage my time.
+-  write clean and maintainable code.
+-  use new tools and technologies.
+-  debug and troubleshoot issues.
+-  give and receive feedback.
+-  be professional ... all the linkedin jargon.
+-  work with LLMs in a production environment.
+-  build a feature from scratch.
+-  **most importantly, made some great friends and memories**.
 
-
+# Thank you
+I want to thank everyone at Highspot for making my internship such a great experience.
+I am not going to name names but you know who you are.
+I am grateful for the opportunity to learn and grow.
+I am excited to see what the future holds.
+And I hope you guys will be as awesome as you are now.
