--- a/src/content/blog/highspot.mdx
+++ b/src/content/blog/highspot.mdx
@@ -1,8 +1,8 @@
 ---
 title: Thank you Highspot
-description: TLDR; Learnt a lot, can't wait to learn more
-date: "2025-09-21"
-draft: true
+description: TLDR; Learnt a lot, can't wait to see what the future holds
+date: "2025-09-22"
+draft: false
 tags: ["development", "job", "life"]
 ---
 ## Contents
@@ -52,6 +52,7 @@ Will try to list some of them here:
 -  **most importantly, made some great friends and memories**.
 
 # Thank you
+
 I want to thank everyone at Highspot for making my internship such a great experience.
 I am not going to name names but you know who you are.
 I am grateful for the opportunity to learn and grow.
